k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-app

spec:
  replicas: 2

  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
      - name: my-app
        image: ponychan3/my-app:cb0e50abb3db079a9479c906d32d9d7f31150500
        ports:
        - containerPort: 80
